checks.

Fixed: Issue #388: The service-local alert settings didn't override global "set alert" for the same
recipient properly.

Fixed: Issue #393: The $HOST in mail alert may be incorrect if FQDN hostname cannot be found.

Fixed: Issue #396: Disable CLI colors if the output is not tty.

Fixed: Issue #400: Clarify network tests documentation.

Fixed: Issue #428: Spelling fixes.

Fixed: Issue #431: Change charset in emails to UTF-8.

Fixed: Return syntax error if send/expect statement is used in the context of other protocol test.

Fixed: Monit HTTP GUI: The port and unixsocket options are now position independent in the "set httpd"
context.

Fixed: If the resource check is disabled (for example because the user doesn't have privileges to
read the data), emit just warning on startup.

Fixed: Solaris: Subtract ZFS ARC size from the system memory usage, so monit can display memory used
by applications (ZFS ARC will return memory to the system when needed).

Fixed: Some linux versions logged "Skipping redundant host 'localhost'" warning in the case that the
/etc/hosts contained localhost entry for both "127.0.0.1" (IPv4 loopback) and "::1" (IPv6 loopback).

Fixed: Allow quoted service names in "depends on" statement.


Version 5.18

New: The service status, summary and procmatch CLI commands are now colorized and use a
tabular format. To disable colors and display nontabular output, use a new -B command-line
option or the "set terminal batch" statement in the monit configuration file.

New: If the service has multiple errors, the service status will describe all errors (originally
monit displayed only one error)

New: Issue #340: New CLI command for services state overview added:
    monit report [up | down | initialising | unmonitored | total]
Output example:
    $ monit report
    up:            11 (39.3%)
    down:          16 (57.1%)
    initialising:   0 (0.0%)
    unmonitored:    1 (3.6%)
    total:         28 services
