@@ -35,6 +35,9 @@ Fixed: Issue #396: Disable CLI colors if the output is not tty.
 
 Fixed: Issue #400: Clarify network tests documentation.
 
+Fixed: Issue #403: If the sender address for monit alert was overriden by "set mail-format" statement,
+don't try to resolve the hostname to FQDN.
+
 Fixed: Issue #428: Spelling fixes.
 
 Fixed: Issue #431: Change charset in emails to UTF-8.
